# support-technician-setup

./: .gitignore  .goosehints  AGENTS.md  DESIGN.md  GEMINI.md  INTEGRATION.md  LICENSE  README.md  exposer.py  requirements.txt  runtime_exec.py  test_runtime_exec.py
.amazonq/rules/: authoring-support-runbooks.md
.claude/agents/: support-architect.md  support-integrator.md
.clinerules/: generating-codebase-harness.md  generating-support-persona.md  support-integrator.md
.clinerules/templates/: persona.reference.md
.continue/rules/: authoring-support-runbooks.md  discovering-support-tools.md  generating-codebase-harness.md  generating-support-persona.md  integrating-support-agent.md  setting-up-support-agent.md  support-architect.md  support-integrator.md
.cursor/rules/: authoring-support-runbooks.mdc  discovering-support-tools.mdc  generating-codebase-harness.mdc  generating-support-persona.mdc  integrating-support-agent.mdc  setting-up-support-agent.mdc  support-architect.mdc  support-integrator.mdc
.gemini/commands/: authoring-support-runbooks.toml  (+5 more)
.github/: copilot-instructions.md
.junie/: guidelines.md
tools/support-binder/: .gitignore  README.md  pyproject.toml  run.py
tools/support-binder/support_binder/: __init__.py  __main__.py  cli.py  config.py  introspect.py  manifest.py  prompts.py  secrets.py  sqlgen.py  verify.py
tools/support-binder/support_binder/engines/: __init__.py  base.py  mock.py  postgres.py
tools/support-binder/tests/: fixtures.py  test_introspect.py  test_manifest.py  test_sqlgen.py  test_verify.py  test_wizard.py
(+51 files in other folders)
